--- a/index.html
+++ b/index.html
@@ -22,21 +22,25 @@
                 <div id="10" class="day tenth"></div>
                 <div id="11" class="day eleventh"></div>
                 <div id="12" class="day twelfth"></div>
+                <div class="blue">
+                    Online <br />
+                    Raffle <br />
+                    Day
+                </div>
             </div>
             <div class="modal" id="modal">
                 <div class="modal-content">
                     <span class="close" id="closeBtn">&times;</span>
-                    <p>
+                    <p style="font-size: 18px">
                         Congratulations!
                         <br />
-                        <br />
-                        Your prize&nbsp;
+
+                        Your gift&nbsp;
                         <br />
                         <span id="titlePrize"></span>
                     </p>
-                    <p>Promocode</p>
                     <div class="flex items-center gap-3 justify-center">
-                        <p id="datePromocode"></p>
+                        <p id="datePromocode" style="font-size: 18px"></p>
                         <p><span class="icon-copy"></span></p>
                         <div class="copy-notify" id="copyNotify">
                             Copied to clipboard
