--- a/index.html
+++ b/index.html
@@ -48,6 +48,110 @@
                     </div>
                 </div>
             </div>
+            <div class="faq-container">
+                <div class="faq-item">
+                    <div class="faq-header">
+                        <span class="faq-question"
+                            >1XBET သင်္ကြန်လက်ဆောင်များပွဲတော်"
+                            ပရိုမိုးရှင်းစည်းမျဉ်းများ</span
+                        >
+                        <span class="faq-arrow">&#9660;</span>
+                    </div>
+                    <div class="faq-answer">
+                        <p>
+                            ၁။ ပရိုမိုးရှင်းကာလ – "1XBET
+                            သင်္ကြန်လက်ဆောင်များပွဲတော်" ပရိုမိုးရှင်းကို အဆင့်
+                            ၂ ဆင့်ဖြင့် ကျင်းပသွားပါမည်။ အဆင့် ၁ သည် 1xbet
+                            အက်ပလီကေးရှင်းတွင် အသုံးပြုရန်အတွက် အသင့်ဖြစ်ထားသော
+                            ဒစ်ဂျစ်တယ်ဆုများနဲ့အတူ "myanmarsports.net"
+                            ဝဘ်ဆိုဒ်တွင် 14.04.25 ရက်နေ့မှ 25.04.2025 ရက်နေ့အထိ
+                            အကျုံးဝင်ပါသည်။ အဆင့် ၂ ကို 26.04.2025 ရက်နေ့မှ
+                            30.04.2025 ရက်နေ့ထိ အွန်လိုင်း "မဲဖောက်ခြင်း"
+                            အစီအစဥ်ဖြင့် ကျင့်ပမည်ဖြစ်ပြီး ပထမအဆင့်မှာ တက်ကြွစွာ
+                            ပါဝင်သူများအတွက်သာ ဖြစ်ပါသည်။
+                        </p>
+                        <p>
+                            ၂။ ပါဝင်သူများအတွက် လိုအပ်ချက်များ (၂.၁)
+                            မြန်မာနိုင်ငံမှ active ဖြစ်သည့် 1xbet
+                            ကစားသမားများအတွက်သာ ဖြစ်ပါသည် (သို့မဟုတ် ပရိုမိုကုဒ်
+                            MMSPORTS100 ဖြင့် 1xbet.com တွင် မှတ်ပုံတင်ပါ)။
+                            (၂.၂) အီးမေးလ်၊ ဖုန်းနံပါတ်ဖြင့် အတည်ပြုရပါမည်။
+                            (၂.၃) ကိုယ်ရေးကိုယ်တာအချက်အလက်ဖြည့်သွင်းထားပြီး အသက်
+                            ၁၈ နှစ်အထက် ဖြစ်ရပါမည်။ (၂.၄) 1xbet
+                            အပလီကေးရှင်းအတွင်း ဘောနပ်စ်ရယူမှုကို သဘောတူညီရပါမည်။
+                            (၂.၅) အလောင်းအစားများ (အားကစား သို့မဟုတ် ကာစီနို)
+                            ကို လောင်းကြေးတင်ထားပြီး ဖြစ်ရပါမည်။
+                        </p>
+                        <p>
+                            ၃။ 1XBET သင်္ကြန်လက်ဆောင်များပွဲတော်"
+                            ပရိုမိုးရှင်းမှာ ဘယ်လိုပါဝင်ရမလဲ။ (၃.၁) သင့်ရဲ့
+                            1xbet အကောင့်ID နှင့် ကိုက်ညီသော အီးမေးလ်ဖြင့်
+                            ပရိုမိုးရှင်းအတွက် မှတ်ပုံတင်ပါ။ (၃.၂) သင့်ရဲ့ 1xbet
+                            အကောင့် ID နှင့် ဖုန်းနံပါတ်အား ဖော်ပြထားကြောင်း
+                            သေချာပါစေ။ (၃.၃) ပရိုမိုးရှင်းကာလအတွင်း
+                            myanmarsports.net ဝဘ်ဆိုဒ်ရှိ
+                            ပရိုမိုးရှင်းစာမျက်နှာတွင် ကျပန်းလက်ဆောင်ကို နေ့စဥ်
+                            ဖွင့်လှစ်နိုင်ပါသည်။ (၃.၄) ပါဝင်သူ ၁ ဦးသည်
+                            တစ်နေ့လျှင် လက်ဆောင် ၁ (တစ်) ခု ခံစားခွင့် ရှိပါသည်။
+                            ပါဝင်သူအနေဖြင့် ပရိုမိုးရှင်း၏ တစ်ရက်ကို လွတ်သွားပါက
+                            ၎င်းနေ့အတွက် လက်ဆောင်ကို လွတ်သွားမည်ဖြစ်ပြီး
+                            အစားပြန်ရမည် မဟုတ်ပါ။
+                        </p>
+                        <p>
+                            ၄။ လက်ဆောင်ကို ဘယ်လိုသုံးမလဲ။ (၄.၁)
+                            ပရိုမိုးရှင်းကမ်းလှမ်းချက်များသည် သင့် 1xbet
+                            ကိုယ်ပိုင်အကောင့်တွင် 30.04.2025 ရက်နေ့အထိ
+                            အကျုံးဝင်ပါသည်။ (၄.၂)
+                            ပရိုမိုးရှင်းကုဒ်၏တရားဝင်ကာလကို သင့်အကောင့်တွင်
+                            စတင်အသက်သွင်းပြီးချိန်မှစ၍ သတ်မှတ်ထားပါသည်။ (၄.၃)
+                            အခမဲ့လောင်းကြေးအတွက် ပရိုမိုးရှင်းကုဒ်ကို
+                            အသက်သွင်းရန်၊ စတင်အသက်သွင်းပြီးချိန်မှစ၍ 35,000MMK
+                            (၃၅,၀၀၀ ကျပ်) အပ်ငွေထည့်ရပါမည်။ (၄.၄) အခမဲ့
+                            လောင်းကြေး ပရိုမိုကုဒ်ကို အသုံးပြုရန်၊ အနည်းဆုံး
+                            ရွေးချယ်မှု 3 ခု ပါသော အလောင်းအစား တစ်ခုစီတွင်
+                            အနည်းဆုံး 1.8 လောင်းကြေးများ ထားရှိပါ။ (၄.၅)
+                            အခမဲ့လှည့်ခြင်းများအတွက် ပရိုမိုကုဒ်ကို
+                            အသက်သွင်းရန်၊ သင်သည် သင့်ကိုယ်ပိုင်အကောင့်တွင်
+                            ပရိုမိုကုဒ်ကို ထည့်သွင်းရမည်ဖြစ်ပြီး၊ ရရှိထားသော
+                            အခမဲ့လှည့်ခြင်းများကို အသုံးပြုကာ အကောင့်အစစ်တွင်
+                            အကြံပြုထားသည့်ပမာဏ (၅ ဆ) ကို ၃ ရက်အတွင်း
+                            လောင်းကြေးထပ် ကစားရပါမည်။ (၄.၆)
+                            အခမဲ့လှည့်ခြင်းများအတွက် ပရိုမိုကုဒ်သည်
+                            ပရိုမိုကုဒ်တွင် သတ်မှတ်ထားသည့် ဂိမ်းအတွက်သာ
+                            အကျုံးဝင်ပါသည်။ (၄.၇) အပိုဆုငွေများအတွက်
+                            ပရိုမိုကုဒ်ကို အသက်သွင်းရန်အတွက်၊ သင်သည်
+                            သင်၏ကိုယ်ပိုင်အကောင့်တွင် ပရိုမိုကုဒ်ကို
+                            ထည့်သွင်းရမည်ဖြစ်ပြီး၊ ထို့နောက် အကောင့်အစစ်တွင်
+                            အကြံပြုထားသည့်ပမာဏ (၅ ဆ) ကို ၃ ရက်အတွင်း
+                            လောင်းကြေးထပ် ကစားရပါမည်။ (၄.၈)
+                            သင်ပြန်လည်ကစားနိုင်ပြီး ဝန်ဆောင်မှုပေးသူ၏ Slots
+                            ကဏ္ဍရှိ ခွင့်ပြုထားသော မည်သည့် ဂိမ်းတွင်မဆို
+                            အပိုဆုငွေများအတွက် ပရိုမိုကုဒ်ကို
+                            အသုံးပြုနိုင်ပါသည်။ ခြွင်းချက် - Sic-Bo, Blackjack,
+                            Hold'em, Keno, Board Games, Provably Fair, Zeppelin,
+                            Backgammon, Legion Poker, Baccarat, Virtual Sports,
+                            Bingo, Keno, TV Games, IDN Poker, Scratch cards,
+                            Other games, Spigo, Wiseodds, Card Games, Lottery,
+                            Poker, Skill Games, Crash Games, TVBet, Skill,
+                            Crash, JetX, Poker, 1xGames, Roulette, Table Games,
+                            Hunting and Fishing, Hunting, Live slots, Live
+                            Casino, Poker, Roulette
+                        </p>
+                        <p>
+                            ၅။ တခြား စည်းကမ်းချက်များ (၅.၁) ပရိုမိုးရှင်းသည်
+                            ထီမဟုတ်ပါ။ ပရိုမိုးရှင်းလက်ဆောင်ရန်ပုံငွေကို
+                            ပါ၀င်သူများမှမဟုတ်ဘဲ စီစဉ်သူမှ ဖွဲ့စည်းသတ်မှတ်ပါသည်။
+                            ဆုအရေအတွက်ကန့်သတ်ထားပါသည်။ (၅.၂) 1xbet
+                            အက်ပ်လီကေးရှင်းတွင် လိမ်လည်မှု သို့မဟုတ်
+                            အလွဲသုံးစားပြုမှုလက္ခဏာများ တွေ့ရှိပါက
+                            ပရိုမိုးရှင်းတွင် ပါဝင်ခြင်း/ ကမ်းလှမ်းချက်ကို
+                            စီစဥ်သူမှ ပယ်ဖျက်ပိုင်ခွင့်ရှိပါသည်။ (၅.၃)
+                            စီစဉ်သူသည် အကြောင်းပြချက်မရှိဘဲ ပရိုမိုးရှင်းကို
+                            အချိန်မရွေး ရပ်စဲပိုင်ခွင့်ရှိသည်။
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
         <script src="./script.js" type="module"></script>
     </body>
